# accounting

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  config-sample.yml
report/d3ia/: package.json
report/d3ia/public/: index.html
report/d3ia/src/: App.js
report/d3ia/src/report/: CSV.jsx  Entries.js  Main.js  Report.js
src/: app.rs  config.rs  dates.rs  error.rs  lib.rs  log_util.rs  main.rs  registry.rs
src/accounting/: category.rs  entry.rs  evaluation.rs  id.rs  mod.rs  representation.rs  sms.rs  statistics.rs  tag.rs  user.rs
src/bot/: app.rs  category.rs  email.rs  handler.rs  mod.rs  report.rs  representation.rs
src/cli/: app.rs  mod.rs
src/persistence/: error.rs  migrate.rs  mod.rs
src/registry/: mod.rs  table.rs
src/representation/: entry.rs  mod.rs
src/representation/statistics/: bot.rs  cli.rs  head.html  mod.rs  react.rs  tail.html
src/web/: android_adapter.rs  app.rs  auth.rs  mod.rs  state.rs
