[package]
name = "accounting"
version = "0.1.0"
authors = ["Alex <busarovalex@yandex.ru>"]

[dependencies]
futures="*"
telegram-bot="*"
tokio-core="*"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.9.2"
error-chain = "0.11.0"
env_logger = "0.5.3"
log = "0.4.0"
uuid = { version = "0.5", features = ["v4"] }
serde_yaml = "0.7"
clap = "2.30.0"
lettre = "0.7"
lettre_email = "0.7"
mime = "*"
base64 = "0.9.0"
