[package]
name = "accounting"
version = "0.1.0"
authors = ["Alex <busarovalex@yandex.ru>"]

[lib]
name = "accounting"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies]
futures="0.1"
telegram-bot="*"
tokio-core="*"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.9.2"
failure = "0.1.3"
failure_derive = "*"
env_logger = "0.6"
log = "0.4.0"
uuid = { version = "0.5", features = ["v4"] }
serde_yaml = "0.7"
clap = "2.30.0"
lettre = "0.9"
lettre_email = "0.7"
mime = "*"
base64 = "0.9.0"

actix = "0.7"
actix-web = "^0.7"
